@@ -119,6 +119,7 @@ def suite():
         'test_parse.test_agilent_microarray',
         'test_parse.test_binary_sff',
         'test_parse.test_blast',
+        'test_parse.test_bowtie',
         'test_parse.test_bpseq',
         'test_parse.test_cigar',
         'test_parse.test_clustal',
@@ -147,6 +148,7 @@ def suite():
         'test_parse.test_nexus',
         'test_parse.test_nupack',
         'test_parse.test_pdb',
+        'test_parse.test_psl',
         'test_parse.test_structure',
         'test_parse.test_pamlmatrix',
         'test_parse.test_phylip',
