@@ -24,6 +24,7 @@ New Features
   are available. Substantial speedups are achieved. These implementations
   do not support obtaining the rate matrix. Use the older style implementation
   if you require that (toggled by the rate_matrix_required argument).
+* Added parsers for bowtie and for BLAT's PSL format
 
 Changes
 -------
